tests/ambient_declarations/ambient_declarations.exp
Error ----------------------------------------------------------------------------------------------- not_ambient.js:4:7

Const must be initialized [ParseError]

   4| const x: string; // Error - const must be initialized
            ^^^^^^^^^


Error ------------------------------------------------------------------------------------------ use_flow_typed.js:12:22

Cannot assign `testModule.getFoo()` to `badX` because string [1] is incompatible with number [2]. [incompatible-type]

   use_flow_typed.js:12:22
   12| const badX: number = testModule.getFoo(); // Error: string is not compatible with number
                            ^^^^^^^^^^^^^^^^^^^

References:
   flow-typed/lib.js:9:37
    9|   declare export function getFoo(): typeof foo;
                                           ^^^^^^^^^^ [1]
   use_flow_typed.js:12:13
   12| const badX: number = testModule.getFoo(); // Error: string is not compatible with number
                   ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------ use_flow_typed.js:13:22

Cannot assign `testModule.getBar()` to `badY` because number [1] is incompatible with string [2]. [incompatible-type]

   use_flow_typed.js:13:22
   13| const badY: string = testModule.getBar(); // Error: number is not compatible with string
                            ^^^^^^^^^^^^^^^^^^^

References:
   flow-typed/lib.js:10:37
   10|   declare export function getBar(): typeof bar;
                                           ^^^^^^^^^^ [1]
   use_flow_typed.js:13:13
   13| const badY: string = testModule.getBar(); // Error: number is not compatible with string
                   ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------ use_flow_typed.js:14:22

Cannot assign `testModule.getBaz()` to `badZ` because boolean [1] is incompatible with number [2]. [incompatible-type]

   use_flow_typed.js:14:22
   14| const badZ: number = testModule.getBaz(); // Error: boolean is not compatible with number
                            ^^^^^^^^^^^^^^^^^^^

References:
   flow-typed/lib.js:11:37
   11|   declare export function getBaz(): typeof baz;
                                           ^^^^^^^^^^ [1]
   use_flow_typed.js:14:13
   14| const badZ: number = testModule.getBaz(); // Error: boolean is not compatible with number
                   ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- use_namespace.js:22:22

Cannot assign `MyNamespace.value` to `badX` because number [1] is incompatible with string [2]. [incompatible-type]

   use_namespace.js:22:22
   22| const badX: string = MyNamespace.value; // Error: number is not compatible with string
                            ^^^^^^^^^^^^^^^^^

References:
   namespace.js:4:16
    4|   const value: number;
                      ^^^^^^ [1]
   use_namespace.js:22:13
   22| const badX: string = MyNamespace.value; // Error: number is not compatible with string
                   ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- use_namespace.js:23:22

Cannot assign `MyNamespace.mutableValue` to `badY` because string [1] is incompatible with number [2].
[incompatible-type]

   use_namespace.js:23:22
   23| const badY: number = MyNamespace.mutableValue; // Error: string is not compatible with number
                            ^^^^^^^^^^^^^^^^^^^^^^^^

References:
   namespace.js:5:21
    5|   let mutableValue: string;
                           ^^^^^^ [1]
   use_namespace.js:23:13
   23| const badY: number = MyNamespace.mutableValue; // Error: string is not compatible with number
                   ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- use_namespace.js:24:27

Cannot assign `MyNamespace.helper(...)` to `badResult` because number [1] is incompatible with string [2].
[incompatible-type]

   use_namespace.js:24:27
   24| const badResult: string = MyNamespace.helper("test"); // Error: number is not compatible with string
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   namespace.js:8:39
    8|   declare function helper(x: string): number;
                                             ^^^^^^ [1]
   use_namespace.js:24:18
   24| const badResult: string = MyNamespace.helper("test"); // Error: number is not compatible with string
                        ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- use_variables.js:18:22

Cannot assign `foo` to `badX` because string [1] is incompatible with number [2]. [incompatible-type]

   use_variables.js:18:22
   18| const badX: number = foo; // Error: string is not compatible with number
                            ^^^

References:
   variables.js.flow:5:12
    5| const foo: string;
                  ^^^^^^ [1]
   use_variables.js:18:13
   18| const badX: number = foo; // Error: string is not compatible with number
                   ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- use_variables.js:19:22

Cannot assign `bar` to `badY` because number [1] is incompatible with string [2]. [incompatible-type]

   use_variables.js:19:22
   19| const badY: string = bar; // Error: number is not compatible with string
                            ^^^

References:
   variables.js.flow:6:10
    6| let bar: number;
                ^^^^^^ [1]
   use_variables.js:19:13
   19| const badY: string = bar; // Error: number is not compatible with string
                   ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- use_variables.js:20:22

Cannot assign `baz` to `badZ` because boolean [1] is incompatible with string [2]. [incompatible-type]

   use_variables.js:20:22
   20| const badZ: string = baz; // Error: boolean is not compatible with string
                            ^^^

References:
   variables.js.flow:7:10
    7| var baz: boolean;
                ^^^^^^^ [1]
   use_variables.js:20:13
   20| const badZ: string = baz; // Error: boolean is not compatible with string
                   ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- use_variables.js:21:31

Cannot assign `genericVal` to `badArr` because in array element: `string` [1] is not exactly the same as `number` [2].
[incompatible-type]

The above-mentioned two types must be the same because arrays are invariantly typed. To fix the error,
- Either make `Array<string>` [3] and `Array<number>` [4] exactly the same
- Or make array type [4] a `ReadonlyArray`.
See https://flow.org/en/docs/faq/#why-cant-i-pass-an-arraystring-to-a-function-that-takes-an-arraystring-number.

   use_variables.js:21:31
   21| const badArr: Array<number> = genericVal; // Error: Array<string> is not compatible with Array<number>
                                     ^^^^^^^^^^

References:
   variables.js.flow:10:25
   10| const genericVal: Array<string>;
                               ^^^^^^ [1]
   use_variables.js:21:21
   21| const badArr: Array<number> = genericVal; // Error: Array<string> is not compatible with Array<number>
                           ^^^^^^ [2]
   variables.js.flow:10:19
   10| const genericVal: Array<string>;
                         ^^^^^^^^^^^^^ [3]
   use_variables.js:21:15
   21| const badArr: Array<number> = genericVal; // Error: Array<string> is not compatible with Array<number>
                     ^^^^^^^^^^^^^ [4]



Found 11 errors
